# oka

./: .gitignore  CMakeLists.txt  oka.in
include/: decoder.h  globals.h  main.h  pii.h  player.h  plugin.h  plugins.h  sink.h  term.h  timer.h  worker.h
include/utils/: audio.h  channel.h  debug.h  defer.h  delegate.h  diag.h  fdev.h  hash.h  id3.h  list.h  loop.h  metadata.h  signals.h  thread.h  timer.h  utils.h  vec.h  xmalloc.h
src/: CMakeLists.txt  main.c  player.c  plugins.c  term.c  timer.c  worker.c
src/plugins/: CMakeLists.txt  mpg123.c
src/plugins/pulse/: ctx.c  mainloop.c  plugin.c  pulse.h  sink.c  stream.c  utils.c
src/utils/: CMakeLists.txt  audio.c  channel.c  debug.c  defer.c  delegate.c  diag.c  fdev.c  hash.c  id3.c  list.c  loop.c  signals.c  thread.c  utils.c  xmalloc.c
